fix text alignment a bit

--- a/src/app/shared/file-preview/widget-file-preview/widget-file-preview.component.scss
+++ b/src/app/shared/file-preview/widget-file-preview/widget-file-preview.component.scss
@@ -56,7 +56,6 @@
 
 ::ng-deep {
     .rs-widget-type-4,
-    .rs-widget-type-0,
     .interaction {
         z-index: 2;
     }
