--- a/src/app/shared/widget/text-widget/text-widget.component.scss
+++ b/src/app/shared/widget/text-widget/text-widget.component.scss
@@ -17,4 +17,6 @@
 
 img {
     image-rendering: pixelated;
+    object-fit: none;
+    object-position: top;
 }
